# oakd_logger

./: .gitmodules  CMakeLists.txt  README.md  logger.py  ubuntu_build.sh
include/: bindings.hpp  config.hpp  logger.hpp  logger_types.hpp  packet_statistics.hpp  preview.hpp  serialization.hpp
src/: bindings.cpp  logger.cpp
